--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWeather</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>MyWeather | Beautiful. Precise. Private.</title>
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="MyWeather | Beautiful. Precise. Private.">
+    <meta name="description" content="Experience weather differently. A privacy-focused, ad-free, and stunningly beautiful weather dashboard powered by Open-Meteo. No tracking, just forecasts.">
+    <meta name="keywords" content="weather, forecast, meteorology, open-meteo, react weather app, beautiful ui, glassmorphism, privacy-focused, weather widget, vercel">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="m4rcel-lol">
+    <meta name="theme-color" content="#0f172a">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://myweather-five.vercel.app/">
+    <meta property="og:title" content="MyWeather | Beautiful. Precise. Private.">
+    <meta property="og:description" content="Experience weather differently. A privacy-focused, ad-free, and stunningly beautiful weather dashboard powered by Open-Meteo.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&q=80&w=1200&h=630">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://myweather-five.vercel.app/">
+    <meta property="twitter:title" content="MyWeather | Beautiful. Precise. Private.">
+    <meta property="twitter:description" content="Experience weather differently. A privacy-focused, ad-free, and stunningly beautiful weather dashboard powered by Open-Meteo.">
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1592210454359-9043f067919b?auto=format&fit=crop&q=80&w=1200&h=630">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -74,11 +98,11 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
